--- a/Week1/Day 4/Practice/user card/style.css
+++ b/Week1/Day 4/Practice/user card/style.css
@@ -4,9 +4,10 @@
 
 }
 .entéte{
-    color: aqua;
-    padding: 5px;
-    margin-top: 5px;
+    background-color: aqua;
+    margin: 30px;
+    padding: 20px;
+    
 }
 h1{
     font-size:xx-large;
@@ -17,10 +18,18 @@ h1{
   width: 70px;
 }
 .img2{
-  width: 15px;
+  
+  height: 15px;
+  margin-top: 15px;
+  margin-left: 0%;
+    
 }
 .img3{
-    width: 20px;
+    width: 15px;
+    height: 15px;
+    margin-top: 15px;
+    margin-left: 0%;
+    
 
 }
 h3{
@@ -30,6 +39,18 @@ h3{
 
 }
 #p2{
+    display: flex;
     color: blue;
     text-decoration: underline;
+
+}
+#p3{
+    display: flex;
+}
+.container{
+    margin: 30px;
+    padding: 20px;
+    width: 50%;
+    border: 3px solid gray;
+    
 }
