--- a/Week1/Day 3/Core/GitHub_Blocks/GitHub_Blocks.css
+++ b/Week1/Day 3/Core/GitHub_Blocks/GitHub_Blocks.css
@@ -1,20 +1,34 @@
 *{
-    padding: 10px;
-    margin: 10px;
+    padding: 5px;
+    margin: 5px;
+    background-color:aliceblue;
 }
 
 h1{
     text-align: center;
+    border-top: 5px black;
+}
+.content {
+    display: flexbox;
+    margin: 10px;
+   
 }
 .box1{
  background-color: aqua;
- justify-content: space-between ;
+ justify-content: space-evenly ;
+ display: flex;
 }
 .box2{
     background-color: chocolate;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    display: flex;
 }
 .box3{
     background-color: white;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    display: flex;
+}
+#img {
+    height: 200px;
+    width: 200px;
 }
