--- a/Week1/Day 4/Practice/user card/style.css
+++ b/Week1/Day 4/Practice/user card/style.css
@@ -1,12 +1,13 @@
 *{
-   margin-left: 10%;
+   margin-left: 0%;
    padding: 0%;
 
 }
 .entéte{
     background-color: aqua;
-    margin: 30px;
-    padding: 20px;
+    width: 100%;
+    height: 100px;
+   
     
 }
 h1{
@@ -16,6 +17,10 @@ h1{
 }
 .img1{
   width: 70px;
+  border-radius: 50%;
+  border: 2px solid gray;
+  position: relative;
+  top: 50px;
 }
 .img2{
   
@@ -35,9 +40,6 @@ h1{
 h3{
     font-weight: lighter;
 }
-#p1{
-
-}
 #p2{
     display: flex;
     color: blue;
@@ -48,9 +50,11 @@ h3{
     display: flex;
 }
 .container{
-    margin: 30px;
-    padding: 20px;
+    /* margin: 30px; */
+    /* padding: 20px; */
     width: 50%;
     border: 3px solid gray;
+    justify-content: center;
+   
     
 }
